RegressionTests/TestSuiteExport/reject/expected_expression.blade
// EXPECT: fail
// DIAGNOSTICS: ExpectedExpression

cog var x: u32 = ;